--- a/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
+++ b/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
@@ -8,7 +8,7 @@
                 {{ 'Role' | localize }}
             </label>
             <div class="col-md-9">
-                <select class="form-control" name="userRole" id="userRole" required [(ngModel)]="selectedRole"
+                <select class="form-control" name="userRole" id="userRole" required [(ngModel)]="selectedRole" [disabled]="disableRoleSelection"
                     (ngModelChange)="onRoleChange()" #roleModel="ngModel">
                     <option *ngFor="let role of roles" [value]="role.normalizedName">
                         {{ role.normalizedName | localize }}
