--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -91,17 +91,14 @@
                     </div>
                     }
                 </div>
+                <!-- (onLazyLoad)="list($event)" -->
                 <div class="card-body table-responsive table-striped table-bordered">
                     <div class="primeng-datatable-container">
                         <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
                             rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }"  (onLazyLoad)="list($event)">
+                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="min-width: 150px" pSortableColumn="userName">
-                                        {{ 'UserName' | localize }}
-                                        <p-sortIcon field="userName"></p-sortIcon>
-                                    </th>
                                     <th style="min-width: 150px" pSortableColumn="name">
                                         {{ 'FullName' | localize }}
                                         <p-sortIcon field="name"></p-sortIcon>
@@ -126,7 +123,7 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.userName }}
+                                            {{ record.fullName }}
                                         </span>
                                     </td>
                                     <td>
