--- a/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
@@ -101,22 +101,15 @@
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th style="min-width: 150px" pSortableColumn="userName">
-                                        {{ 'UserName' | localize }}
-                                        <p-sortIcon field="userName"></p-sortIcon>
+                                        Patient
+                                        <!-- <p-sortIcon field="userName"></p-sortIcon> -->
                                     </th>
                                     <th style="min-width: 150px" pSortableColumn="name">
-                                        {{ 'FullName' | localize }}
-                                        <p-sortIcon field="name"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px" pSortableColumn="emailAddress">
-                                        {{ 'EmailAddress' | localize }}
-                                        <p-sortIcon field="emailAddress"></p-sortIcon>
+                                        Date
+                                        <!-- <p-sortIcon field="name"></p-sortIcon> -->
                                     </th>
                                     <th style="min-width: 150px">
-                                        {{ 'Roles' | localize }}
-                                    </th>
-                                    <th style="min-width: 50px">
-                                        {{ 'IsActive' | localize }}
+                                        Medications
                                     </th>
                                     <th style="min-width: 130px">
                                         {{ 'Actions' | localize }}
@@ -128,27 +121,17 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.userName }}
+                                            {{ record.patient }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.fullName }}
+                                            {{ record.issueDate| date: 'dd/MM/yyyy' }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.emailAddress }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.roleNames }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.isActive }}
+                                            {{ record.items }}
                                         </span>
                                     </td>
                                     <td>
@@ -161,11 +144,6 @@
                                             (click)="delete(record)">
                                             <i class="fas fa-trash"></i>
                                             {{ 'Delete' | localize }}
-                                        </button>
-                                        <button type="button" class="btn btn-sm bg-secondary"
-                                            (click)="resetPassword(record)">
-                                            <i class="fas fa-lock"></i>
-                                            {{ 'ResetPassword' | localize }}
                                         </button>
                                     </td>
                                 </tr>
