--- a/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
+++ b/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
@@ -6,7 +6,7 @@
                     <h1>Vitals</h1>
                 </div>
                 <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createPrescription()">
+                    <a href="javascript:;" class="btn bg-blue" (click)="createVitals()">
                         <i class="fa fa-plus-square"></i>
                         {{ 'Create' | localize }}
                     </a>
