--- a/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
+++ b/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
@@ -107,7 +107,7 @@
                                         <p-sortIcon field="nurseName"></p-sortIcon>
                                     </th>
                                     <th style="min-width: 100px" >
-                                        {{ 'Date' | localize }}
+                                        {{ 'Temperature' | localize }}
                                     </th>
                                     <th style="min-width: 150px" >
                                         {{ 'BloodPressure' | localize }}
@@ -117,9 +117,6 @@
                                     </th>
                                     <th style="min-width: 80px">
                                         {{ 'OxygenSaturation' | localize }}
-                                    </th>
-                                    <th style="min-width: 50px">
-                                        {{ 'IsActive' | localize }}
                                     </th>
                                     <th style="min-width: 130px">
                                         {{ 'Actions' | localize }}
@@ -131,17 +128,17 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.patientname }}
+                                            {{ record.patient.fullName }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.nursename }}
+                                            {{ record.nurse.fullName }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.date }}
+                                            {{ record.temperature }}
                                         </span>
                                     </td>
                                     <td>
@@ -151,17 +148,12 @@
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.RespirationRate }}
+                                            {{ record.respirationRate }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.OxygenSaturation }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.isActive }}
+                                            {{ record.oxygenSaturation }}
                                         </span>
                                     </td>
                                     <td>
