--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -100,21 +100,21 @@
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th style="min-width: 150px" pSortableColumn="name">
-                                        {{ 'FullName' | localize }}
-                                        <p-sortIcon field="name"></p-sortIcon>
+                                        Patient
+                                        <!-- <p-sortIcon field="name"></p-sortIcon> -->
                                     </th>
                                     <th style="min-width: 150px" pSortableColumn="emailAddress">
-                                        {{ 'EmailAddress' | localize }}
-                                        <p-sortIcon field="emailAddress"></p-sortIcon>
+                                        Doctor
+                                        <!-- <p-sortIcon field="emailAddress"></p-sortIcon> -->
                                     </th>
                                     <th style="min-width: 150px">
-                                        {{ 'Roles' | localize }}
-                                    </th>
-                                    <th style="min-width: 50px">
-                                        {{ 'IsActive' | localize }}
+                                        Date & Time
                                     </th>
                                     <th style="min-width: 130px">
-                                        {{ 'Actions' | localize }}
+                                        Status
+                                    </th>
+                                    <th style="min-width: 130px">
+                                        Actions
                                     </th>
                                 </tr>
                             </ng-template>
@@ -123,39 +123,34 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.fullName }}
+                                            {{ record.patient.fullName }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.fullName }}
+                                            Dr. {{ record.doctor.fullName }}
                                         </span>
                                     </td>
                                     <td>
-                                        <span>
-                                            {{ record.emailAddress }}
-                                        </span>
+                                        <p class="m-0">
+                                            {{ record.appointmentDate | date: 'dd/MM/yyyy' }}
+                                        </p>
+                                        <p class="m-0">
+                                            {{record.appointmentTimeSlot}}
+                                        </p>
                                     </td>
                                     <td>
-                                        <span>
-                                            {{ record.roleNames }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.isActive }}
-                                        </span>
+                                        <p-chip [label]="getStatusLabel(record.status)"
+                                            [class]="getStatusClass(record.status)" />
                                     </td>
                                     <td>
                                         <button type="button" class="btn btn-sm bg-secondary"
                                             (click)="editAppoinment(record)">
                                             <i class="fas fa-pencil-alt"></i>
-                                            {{ 'Edit' | localize }}
                                         </button>
                                         <button type="button" class="btn btn-sm bg-danger mx-2"
                                             (click)="delete(record)">
                                             <i class="fas fa-trash"></i>
-                                            {{ 'Delete' | localize }}
                                         </button>
                                     </td>
                                 </tr>
