implemented full CRUD for patient, doctor, and nurse

--- a/10.2.0/angular/src/app/users/edit-user/edit-user-dialog.component.html
+++ b/10.2.0/angular/src/app/users/edit-user/edit-user-dialog.component.html
@@ -77,6 +77,10 @@
             (technicianDataChange)="onLabTechnicianDataChange($event)">
         </app-edit-lab-technician>
 
+        <app-edit-patients *ngIf="selectedRole==='PATIENT'" [patientData]="patientData"
+            (patientDataChange)="onPatientDataChange($event)">
+        </app-edit-patients>
+
     </div>
     <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
         (onCancelClick)="bsModalRef.hide()">
