--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -130,25 +130,15 @@
                                             [class]="getStatusClass(record.status)" />
                                     </td>
                                     <td>
-                                        <!-- <button
-                                            *ngIf="record.status !== AppointmentStatus?._2 && record.status !== AppointmentStatus?._3"
-                                            type="button" class="btn btn-sm bg-secondary"
-                                            (click)="editAppoinment(record)">
-                                            <i class="fas fa-pencil-alt"></i>
-                                        </button>
-                                        <button type="button" class="btn btn-sm bg-danger mx-2"
-                                            (click)="delete(record)">
-                                            <i class="fas fa-trash"></i>
-                                        </button> -->
                                         <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
                                             (click)="rowMenu.toggle($event); selectedRecord = record">
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li (click)="editAppoinment(record)">
+                                                <li (click)="editAppoinment(selectedRecord)">   
                                                     <i class="pi pi-pencil"></i> Edit
                                                 </li>
-                                                <li (click)="delete(record)">
+                                                <li (click)="delete(selectedRecord)">
                                                     <i class="pi pi-trash"></i> Delete
                                                 </li>
                                             </ul>
